UI improvements: Add utility classes, refine logic field styling, and fix sidebar collapse behavior

--- a/resources/scss/admin/components/builder/_logic-fields.scss
+++ b/resources/scss/admin/components/builder/_logic-fields.scss
@@ -2,10 +2,6 @@
  * Component: Logic Fields
  */
 
-.frm_logic_field_opts {
-	max-width: 35%;
-}
-
 .frm-inline-select,
 p.frm-inline-select,
 .frm_logic_rows .frm-collapse-me {
@@ -14,7 +10,6 @@ p.frm-inline-select,
 
 .frm_logic_row {
 	padding: var(--gap-xs) 0 0;
-	align-items: center;
 }
 
 .frm-single-settings ul.frm_sortable_field_opts {
