--- a/resources/scss/admin/layout/sidebar/_sidebar.scss
+++ b/resources/scss/admin/layout/sidebar/_sidebar.scss
@@ -75,7 +75,7 @@
 		background-color: var(--sidebar-hover);
 	}
 
-	+ div {
+	&:not(.frm-collapsed) + div {
 		padding-top: var(--gap-xs) !important;
 		padding-bottom: var(--gap-sm);
 	}
