--- a/resources/scss/admin/utilities/spacing/_padding.scss
+++ b/resources/scss/admin/utilities/spacing/_padding.scss
@@ -61,6 +61,10 @@
 	padding-top: var(--gap-xl) !important;
 }
 
+.frm-pr-lg {
+	padding-right: var(--gap-lg) !important;
+}
+
 .frm-pb-md {
 	padding-bottom: var(--gap-md) !important;
 }
