--- a/resources/scss/admin/utilities/typography/_text-overflow.scss
+++ b/resources/scss/admin/utilities/typography/_text-overflow.scss
@@ -17,3 +17,8 @@
 .frm-line-clamp-2 {
 	-webkit-line-clamp: 2;
 }
+
+
+.frm-white-space-nowrap {
+	white-space: nowrap;
+}
